--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <body>
     <!-- Main content -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
-        <header class="flex">
+        <header class="lg:flex pt-10 mb-20">
             <!-- text contain -->
             <div class="">
-                <h1 class="text-5xl md:text-7xl">It's good<br>
+                <h1 class="text-5xl md:text-7xl py-5">It's good<br>
                     tea time at The<br>Tea House</h1>
-                <p class="text-gray-500">Tea and Botanical Solutions Supplier Give Optimum<br> Satisfaction To Your
+                <p class="text-gray-500 py-5">Tea and Botanical Solutions Supplier Give Optimum<br> Satisfaction To Your
                     Taste Buds.</p>
                 <button class="bg-gradient-to-r from-orange-500 to-red-500 py-3 px-3 text-white font-bold ">
                     Explore More <i class="fa-solid fa-arrow-right #FF0000 rotate-45"></i>
@@ -48,7 +48,8 @@
                     <img class="w-full" src="images/banner.png" alt="">
                 </div>
                 <!-- card -->
-                <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+                <div
+                    class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
                     <!-- icon -->
                     <div>
                         <i class="fa-solid fa-star text-2xl text-amber-500"></i>
@@ -61,6 +62,51 @@
                 </div>
             </div>
         </header>
+
+        <!-- features product section -->
+        <section class="py-8 lg:py-24">
+            <!-- title -->
+            <div class="text-center mb-8"> 
+                <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
+                <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <!-- grid card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
+                <!-- product card -->
+                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
+                    <img class="mx-auto pt-4" src="images/tea-1.png  " alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                 </div>
+                <!-- product card -->
+                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
+                    <img class="mx-auto pt-4" src="images/tea-2.png  " alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                 </div>
+                <!-- product card -->
+                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
+                    <img class="mx-auto pt-4" src="images/tea-3.png  " alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                 </div>
+                <!-- product card -->
+                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
+                    <img class="mx-auto pt-4" src="images/tea-4.png  " alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                 </div>
+
+            </div>
+        </section>
     </main>
 </body>
 
