--- a/index.html
+++ b/index.html
@@ -66,44 +66,84 @@
         <!-- features product section -->
         <section class="py-8 lg:py-24">
             <!-- title -->
-            <div class="text-center mb-8"> 
+            <div class="text-center mb-8">
                 <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
-                <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
             </div>
             <!-- grid card -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
                 <!-- product card -->
-                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
                     <img class="mx-auto pt-4" src="images/tea-1.png  " alt="">
                     <div class="p-4">
                         <h2 class="font-bold text-xl">Milk Tea</h2>
-                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
                     </div>
-                 </div>
+                </div>
                 <!-- product card -->
-                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
                     <img class="mx-auto pt-4" src="images/tea-2.png  " alt="">
                     <div class="p-4">
                         <h2 class="font-bold text-xl">Milk Tea</h2>
-                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
                     </div>
-                 </div>
+                </div>
                 <!-- product card -->
-                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
                     <img class="mx-auto pt-4" src="images/tea-3.png  " alt="">
                     <div class="p-4">
                         <h2 class="font-bold text-xl">Milk Tea</h2>
-                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
                     </div>
-                 </div>
+                </div>
                 <!-- product card -->
-                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden text-center ">
                     <img class="mx-auto pt-4" src="images/tea-4.png  " alt="">
                     <div class="p-4">
                         <h2 class="font-bold text-xl">Milk Tea</h2>
-                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
                     </div>
-                 </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- Great tea section -->
+        <section class="mb-24">
+            <div class="grid grid-cols-2 grid-rows-3">
+                <!-- Image section -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-5 lg:w-5/6">
+                    <div class="h-40 bg-gradient-to-r from-red-100 to-red-50 rounded-xl">
+                    </div>
+                    <div class="bg-orange-50 rounded-xl row-span-2">
+                        <img class="mx-auto my-5" src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-stone-200 rounded-xl row-span-2">
+                        <img class="mx-auto my-5" src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="h-40 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl">
+                    </div>
+
+
+                </div>
+                <!-- Text section -->
+                <div>
+                    <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+                    <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor
+                        from all possessions .
+                        It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+                        deeply appreciated by its custoers because of good words of mouth and unique customized service
+                        orginated from Taiwan.</p>
+                    <br>
+                    <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
+                    <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and
+                        minimalist impression</p>
+                    <br>
+                    <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
+                    <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use
+                        it.</p>
+                </div>
 
             </div>
         </section>
