adding news card section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!-- card -->
                 <div
-                    class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+                    class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28 ">
                     <!-- icon -->
                     <div>
                         <i class="fa-solid fa-star text-2xl text-amber-500"></i>
@@ -111,7 +111,7 @@
         </section>
         <!-- Great tea section -->
         <section class="">
-            <div class="grid grid-cols-2 grid-rows-3">
+            <div class="grid grid-cols-2 mb-20">
                 <!-- Image section -->
                 <div class="grid grid-cols-2 grid-rows-3 gap-5 lg:w-5/6">
                     <div class="h-40 bg-gradient-to-r from-red-100 to-red-50 rounded-xl">
@@ -225,6 +225,52 @@
 
 
         </section>
+
+
+        <!-- news section -->
+        <section>
+            <h1 class="font-bold text-5xl text-stone-950 my-8 text-center">News & Events</h1>
+            <p class="text-lg text-slate-400 mb-12 text-center">There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                words which don't look even slightly believable. </p>
+
+
+            <!-- news card -->
+            <div class="mb-24 flex gap-x-4">
+                <!-- 1st news card -->
+                <div class=" w-4/12 rounded-xl border-2 p-5 to-black ">
+                    <img class="" src="images/news-1.png" alt="">
+                    <p class="py-3 text-stone-400">Feb 05, 2027</p>
+                    <h4 class="text-lg font-bold pb-2">Collecting 8 points for<br>discount</h4>
+                    <p class="text-base text-stone-400">There are many variations of passages of Lorem Ipsum available.
+                    </p>
+                    <button class="text-base font-bold mt-3 hover:text-amber-300">Learn More</button>
+
+                </div>
+                <!-- 2nd news card -->
+                <div class=" w-4/12 rounded-xl border-2 p-5 to-black ">
+                    <img class="" src="images/news-2.png" alt="">
+                    <p class="py-3 text-stone-400">Feb 05, 2027</p>
+                    <h4 class="text-lg font-bold pb-2">Collecting 8 points for<br>discount</h4>
+                    <p class="text-base text-stone-400">There are many variations of passages of Lorem Ipsum available.
+                    </p>
+                    <button class="text-base font-bold mt-3 hover:text-amber-300">Learn More</button>
+
+                </div>
+                <!-- 3rd News card -->
+                <div class=" w-4/12 rounded-xl border-2 p-5 to-black ">
+                    <img class="" src="images/news-3.png" alt="">
+                    <p class="py-3 text-stone-400">Feb 05, 2027</p>
+                    <h4 class="text-lg font-bold pb-2">Collecting 8 points for<br>discount</h4>
+                    <p class="text-base text-stone-400">There are many variations of passages of Lorem Ipsum available.
+                    </p>
+                    <button class="text-base font-bold mt-3 hover:text-amber-300">Learn More</button>
+
+                </div>
+            </div>
+
+        </section>
+
     </main>
     <footer class="bg-orange-100  text-gray-700 py-10 px-4 md:px-16">
         <div class="w-9/12 mx-auto">
@@ -295,28 +341,20 @@
                     <div class="flex flex-col space-y-2">
                         <div>
                             <input type="text" placeholder="Email-Address "
-                                class="bg-transparent border-b-2 border-black w-4/6 ">
+                                class="bg-transparent border-b-2 mt-2 gap-y-2 border-black w-4/6 ">
                             <i
-                                class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 inline-flex rounded-full text-white justify-center items-center"></i>
+                                class="fa-solid fa-chevron-right w-7 h-7  bg-orange-600 inline-flex rounded-full text-white justify-center items-center"></i>
                         </div>
                         <div class="flex justify-center w-2/5 mb-2 mt-8 gap-5">
                             <i class="fa-brands fa-facebook"></i>
                             <i class="fa-brands fa-instagram"></i>
                             <i class="fa-brands fa-twitter"></i>
-
                         </div>
-
-
                     </div>
-
-
                 </div>
-                <div class="text-center pt-4 mt-4">
-                    <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
-
-                </div>
-
-
+            </div>
+            <div class=" text-center pt-4 mt-4">
+                <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
 
             </div>
 
